--- a/server/auth-service/package.json
+++ b/server/auth-service/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.14",
     "sequelize": "^6.29.3"
   }
 }
